# Sxaint

./: .gitignore  CMakeLists.txt  README.md  main.cpp  speed.txt  stun.txt
UI/: appwindow.slint
include/core/: chunker.h  compressor.h  crypto.h  file_mapper.h  hasher.h  manifest.h  metrics.h  test.h  thread_pool.h
include/net/: discovery.h  protocol.h  session.h  stun.h  transport.h
kcp-2.1.1/: .gitignore  README.en.md  README.md
src/core/: chunker.cpp  compressor.cpp  crypto.cpp  file_mapper.cpp  hasher.cpp  manifest.cpp  metrics.cpp  thread_pool.cpp
src/net/: discovery.cpp  session.cpp  stun.cpp  transport.cpp
